# emblib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: embtool.cpp  main.cpp
data/embd/test/cmds/: motor.txt
doc/: pi_notes.md  pico_notes.md
inc/: ut
inc/emb/: cutil_mcu.h  cutil_mini.h  embLib.h  embtool.h  eutils.h
inc/emb/esp32/: cutils_esp.h  embLib_esp.h  servo_mcpwm.h
pi/: CMakeLists.txt  readme.md
pi/pwm/: blink.cpp
pi/scp/: btserial.sh  repeat_cmd.sh  user_rc.sh
pi/test/pwm/: cc.sh  pipwm.cpp  readme.md  spwm.cpp  wppwm.cpp
src/: dualMotor.cpp  dummy.cpp  embCmd.cpp  embLib.cpp  eutils.cpp  gpio.cpp  io_cmd.cpp  mathu_mcu.cpp  motor.cpp  motorD.cpp  motorT.cpp  pwm.cpp  pwm_pc.cpp  serial.cpp  serialCLS.cpp  servo.cpp  spi.cpp  ut
src/esp32/: adc_esp.cpp  cutils_esp.cpp  emblib_esp.cpp  gpio.cpp  log_esp.cpp  mqtt_esp.cpp  oled_esp.cpp  pwm_esp.cpp  servo_esp.cpp  servo_mcpwm.cpp  wifi_esp.cpp
src/mcu/: cutil_mcu.cpp
src/pi/: pwm_pi.cpp
test/pico/servo/: servo.ino
